--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -2,7 +2,9 @@ $light-grey: #f2f2f2;
 $text-color: #444;
 $white: #fff;
 $green: green;
+$light: #f8f9fc;
 $red: red;
+$black: #000;
 $black-transparent: rgba(0, 0, 0, 0.6);
 
 $nb-column-grid: 12;
@@ -12,3 +14,5 @@ $container-margin: auto;
 $container-width: 900px;
 
 $desktop-breakpoint: 960;
+
+$sidebar-color: #9142be;
