--- a/www/public/scss/src/scss/components/_sidebar.scss
+++ b/www/public/scss/src/scss/components/_sidebar.scss
@@ -1,3 +1,8 @@
-sidebar {
-    height: 600px;
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    min-height: 100vh;
+    background-color: $sidebar-color;
 }
+
