--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -6,5 +6,11 @@
 @import "components/button";
 @import "components/image-banner";
 @import "components/slider";
+@import "components/search";
+@import "components/sidebar";
+@import "components/navbar";
+@import "components/dropdown";
+
+@import "components/editor";
 
 @import "grids";
