--- a/www/public/scss/src/scss/components/_sidebar.scss
+++ b/www/public/scss/src/scss/components/_sidebar.scss
@@ -7,17 +7,24 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    list-style: none;
 }
 
 .sidebar .sidebar-nav .sidebar-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: rem(20);
+    width: 100%;
     color: $white;
+    text-decoration: none;
 }
 
-.sidebar  .sidebar-nav .sidebar-link::after {
-	content: '';
-	background-image: url('/www/public/img/arrow.svg');
-	background-position: center;
-    background-size: contain;
-	transform: rotate(180deg);
+.sidebar .sidebar-nav .sidebar-link:nth-child(1) {
+    margin-top: rem(75);
+}
+
+.sidebar  .sidebar-nav .sidebar-link img {
+    width: rem(20);
+    transform: rotate(180deg);
+    filter: invert(100%);
 }
