Ajout des cadres pour la view Dashboard + SCSS

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -16,3 +16,6 @@ $container-width: 900px;
 $desktop-breakpoint: 960;
 
 $sidebar-color: #9142be;
+
+$article-color-purple: #D9B2E8;
+$article-color-light_purple: #E7C9F3;
