--- a/www/public/scss/src/scss/components/_editor.scss
+++ b/www/public/scss/src/scss/components/_editor.scss
@@ -6,6 +6,14 @@
     background-color: $light!important;
 }
 
+.bg-light_purple {
+    background-color: $article-color-light_purple;
+}
+
+.bg-purple {
+    background-color: $article-color-purple;
+}
+
 .padding-0 {
     padding: 0!important;
 }
