--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/sidebar";
 @import "components/navbar";
 @import "components/dropdown";
+@import "components/article";
 
 @import "components/editor";
 
