--- a/www/public/scss/src/scss/_globals.scss
+++ b/www/public/scss/src/scss/_globals.scss
@@ -34,8 +34,15 @@ h2 {
     overflow: hidden;
 }
 
-.vertically-centered {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);   /* permet de déplacer à une hauteur de -50% de l'élément */
+.form-select {
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #6e707e;
+    background-color: $light;
+    background-clip: padding-box;
+    border: 1px solid #d1d3e2;
+    border-radius: 0.35rem;
 }
