Navbar template front non responsive

--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -23,3 +23,12 @@
 .navbar .navbar-back .computer span {
     margin-left: 10px;
 }
+
+
+/* Front */
+.navbar .navbar-front a {
+    text-decoration: none;
+    letter-spacing: rem(2);
+    color: $black;
+    padding: rem(10);
+}
