--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -32,3 +32,69 @@
     color: $black;
     padding: rem(10);
 }
+
+.navbar .burger {
+    padding-right: rem(15);
+    font-size: rem(35);
+    cursor:pointer
+}
+
+.navbar .dropdown-front {
+    display: none;
+}
+
+.navbar-front{
+    display: none;
+}
+
+
+.sidenav {
+    display: flex;
+    flex-direction : column;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+  @media screen and (min-width: 960px) {
+    .navbar .dropdown-front {
+        display: block;
+    }
+    .navbar .burger {
+        display: none;
+    }
+
+    .navbar-front{
+        display: block;
+    }
+  }
