ajout graphes dashboard + changements couleurs

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$light-grey: #f2f2f2;
+$light-grey: #F9F9F9;
 $text-color: #444;
 $white: #fff;
 $green: green;
@@ -15,7 +15,9 @@ $container-width: 900px;
 
 $desktop-breakpoint: 960;
 
-$sidebar-color: #9142be;
+$sidebar-color: #402082;
 
-$article-color-purple: #D9B2E8;
+$article-color-purple: #E7E0F4;
 $article-color-light_purple: #E7C9F3;
+$article-color-grey: #F0F0F0;
+$article-color-white: #FFFFFF;
