--- a/www/public/scss/src/scss/components/_editor.scss
+++ b/www/public/scss/src/scss/components/_editor.scss
@@ -1,13 +1,13 @@
 .bg-white {
-    background-color: $white;
+    background-color: $article-color-white;
 }
 
 .bg-light {
     background-color: $light!important;
 }
 
-.bg-light_purple {
-    background-color: $article-color-light_purple;
+.bg-grey {
+    background-color: $article-color-grey;
 }
 
 .bg-purple {
