--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -11,7 +11,7 @@
 @import "components/navbar";
 @import "components/dropdown";
 @import "components/article";
-
+@import "components/dashboard-item";
 @import "components/editor";
 
 @import "grids";
