Hover pour navbar & suppression margin grids

--- a/www/public/scss/src/scss/_grids.scss
+++ b/www/public/scss/src/scss/_grids.scss
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     padding: rem($gouttiere) rem(0);
-    margin: rem(0) rem(-$gouttiere);
+    // margin: rem(0) rem(-$gouttiere);
 }
 
 .col-inner {
