--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $white: #fff;
 $green: green;
 $light: #f8f9fc;
 $red: red;
+$grey: #818181;
 $black: #000;
 $black-transparent: rgba(0, 0, 0, 0.6);
 
