--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -48,7 +48,7 @@
 }
 
 
-.sidenav {
+.navbar-front-mobile {
     display: flex;
     flex-direction : column;
     align-items: center;
@@ -65,20 +65,20 @@
     padding-top: 60px;
   }
   
-  .sidenav a {
+  .navbar-front-mobile a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: $grey;
     display: block;
     transition: 0.3s;
   }
   
-  .sidenav a:hover {
+  .navbar-front-mobile a:hover {
     color: #f1f1f1;
   }
   
-  .sidenav .closebtn {
+  .navbar-front-mobile .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
@@ -96,5 +96,9 @@
 
     .navbar-front{
         display: block;
+    }
+
+    .navbar-front a:hover{
+        color: $grey;
     }
   }
