Footer template front

--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -13,5 +13,6 @@
 @import "components/article";
 @import "components/dashboard-item";
 @import "components/editor";
+@import "components/footer";
 
 @import "grids";
