--- a/www/public/scss/src/scss/components/_image-banner.scss
+++ b/www/public/scss/src/scss/components/_image-banner.scss
@@ -1,8 +1,9 @@
 .image-banner {
-    padding-top: 40%;
-    background-color: $red;
+    margin-top: 4rem;
+    height: rem(350);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
     &--text {
         & > section {
@@ -11,7 +12,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: $black-transparent;
             display: flex;
             & h1 {
                 margin: auto;
