--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -1,4 +1,8 @@
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
