Vue home : Ajout des cadres et slider

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $red: red;
 $grey: #818181;
 $black: #000;
 $black-transparent: rgba(0, 0, 0, 0.6);
+$btn-more: #D6D6E1;
 
 $nb-column-grid: 12;
 $gouttiere: 10;
@@ -22,3 +23,5 @@ $article-color-purple: #E7E0F4;
 $article-color-light_purple: #E7C9F3;
 $article-color-grey: #F0F0F0;
 $article-color-white: #FFFFFF;
+
+$frame: #E3E3EB;
