--- a/www/public/scss/src/scss/_globals.scss
+++ b/www/public/scss/src/scss/_globals.scss
@@ -47,11 +47,8 @@ h2 {
     border-radius: 0.35rem;
 }
 
-.small-menu {
-    background-color: $grey;
-    padding: 22px 22px!important;
-    margin: 22px 22px!important;    
-}
-.small-menu span {
+div.ligne {
     margin: auto;
+    width: 65%;
+    border-bottom:1px solid black;
 }
