--- a/www/public/scss/src/scss/components/_slider.scss
+++ b/www/public/scss/src/scss/components/_slider.scss
@@ -2,7 +2,7 @@
 	overflow: hidden;
 	position: relative;
 	background-color: grey;
-	width: 576px;
+	width: 100%;
 	height: 360px;
 	display: flex;
 	align-items: center;
@@ -51,7 +51,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-image: url('/www/public/img/arrow.svg');
+	background-image: url('/public/img/arrow.svg');
 	background-position: center;
 	background-size: contain;
 }
