--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -14,5 +14,6 @@
 @import "components/dashboard-item";
 @import "components/editor";
 @import "components/footer";
+@import "components/frame";
 
 @import "grids";
