--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -1,14 +1,17 @@
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between; 
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
     height: 4rem;
+}
+
+.navbar--fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 .navbar .navbar-back{
