Ajout des layouts des menus

--- a/www/public/scss/src/scss/_globals.scss
+++ b/www/public/scss/src/scss/_globals.scss
@@ -52,3 +52,9 @@ div.ligne {
     width: 65%;
     border-bottom:1px solid black;
 }
+
+@for $i from 1 through 5 {
+    .mt-#{$i} {
+        margin-top: #{$i}rem;
+    }
+  }
