finitions dahsboard view

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -22,3 +22,5 @@ $article-color-purple: #E7E0F4;
 $article-color-light_purple: #E7C9F3;
 $article-color-grey: #F0F0F0;
 $article-color-white: #FFFFFF;
+
+$dashboard-item-border-color: #F1F1F1;
