--- a/www/public/scss/src/scss/components/_dashboard-item.scss
+++ b/www/public/scss/src/scss/components/_dashboard-item.scss
@@ -1,5 +1,8 @@
 .dashboard-item {
     transition: all 0.5s;
+    min-height: rem(100);
+    box-shadow: 1px 1px 1px $dashboard-item-border-color, -1px -1px 1px $dashboard-item-border-color;
+    border-radius: 3px;
     
     &:hover {
         transform: scale(1.08);
@@ -15,20 +18,4 @@
 }
 #graph-new-clients {
     background-color: $article-color-grey;
-}
-
-#container {
-    width: calc(90%);
-}
-
-.graph-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.graph-container > * {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
