--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between; 
-    box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
+    box-shadow: 0px 4px 4px rgba(236, 236, 236, 0.5);
     height: 4rem;
 }
 
