Ajout d'une premiere version des entrées et des plats

--- a/www/public/scss/src/scss/_globals.scss
+++ b/www/public/scss/src/scss/_globals.scss
@@ -58,3 +58,11 @@ div.ligne {
         margin-top: #{$i}rem;
     }
   }
+
+.text-center {
+    text-align: center;
+}
+
+.width-50 {
+    width: 50%;
+}
