commit derniere minute

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -13,7 +13,7 @@ $nb-column-grid: 12;
 $gouttiere: 10;
 
 $container-margin: auto;
-$container-width: 900px;
+$container-width: rem(900);
 
 $desktop-breakpoint: 960;
 
