--- a/www/public/scss/src/scss/_globals.scss
+++ b/www/public/scss/src/scss/_globals.scss
@@ -35,7 +35,7 @@ h2 {
 }
 
 .form-select {
-    height: calc(1.5em + 0.75rem + 2px);
+    height: calc(1.5em + 0.75rem + rem(2));
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -43,14 +43,14 @@ h2 {
     color: #6e707e;
     background-color: $light;
     background-clip: padding-box;
-    border: 1px solid #d1d3e2;
+    border: rem(1) solid #d1d3e2;
     border-radius: 0.35rem;
 }
 
 div.ligne {
     margin: auto;
     width: 65%;
-    border-bottom:1px solid black;
+    border-bottom:rem(1) solid black;
 }
 
 @for $i from 1 through 5 {
