--- a/www/public/scss/src/scss/_grids.scss
+++ b/www/public/scss/src/scss/_grids.scss
@@ -8,7 +8,7 @@
 }
 
 .col-inner {
-    padding: 15px;
+    padding: rem(15);
 }
 
 /* Déclaration des styles md */
@@ -41,7 +41,7 @@
 }
 /* Fin déclaration des styles md */
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: rem(960)) {
     @for $i from 1 through $nb-column-grid {
         .col-md-#{$i} {
             flex-basis: ((100 / $nb-column-grid) * $i) * 1%;
@@ -50,7 +50,7 @@
     }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: rem(1600)) {
     @for $i from 1 through $nb-column-grid {
         .col-lg-#{$i} {
             flex-basis: ((100 / $nb-column-grid) * $i) * 1%;
