--- a/www/public/scss/src/scss/components/_dropdown.scss
+++ b/www/public/scss/src/scss/components/_dropdown.scss
@@ -6,15 +6,15 @@
         display: none;
         position: absolute;
         background-color: #f9f9f9;
-        min-width: 215px;
-        padding: 8px 12px;
+        min-width: rem(215);
+        padding: rem(8) rem(12);
         z-index: 1;
         right: 0;
 
         & a {
             text-align: left;
             color: black;
-            padding: 12px 16px;
+            padding: rem(12) rem(16);
             text-decoration: none;
             display: block;
 
