--- a/www/public/scss/src/scss/components/_search.scss
+++ b/www/public/scss/src/scss/components/_search.scss
@@ -15,7 +15,7 @@
 .form-control {
     display: block;
     width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
+    height: calc(1.5em + 0.75rem + rem(2));
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -23,6 +23,6 @@
     color: #6e707e;
     background-color: $light;
     background-clip: padding-box;
-    border: 1px solid #d1d3e2;
+    border: rem(1) solid #d1d3e2;
     border-radius: 0.35rem;
 }
