--- a/www/public/scss/src/scss/components/_slider.scss
+++ b/www/public/scss/src/scss/components/_slider.scss
@@ -3,7 +3,7 @@
 	position: relative;
 	background-color: grey;
 	width: 100%;
-	height: 360px;
+	height: rem(360);
 	display: flex;
 	align-items: center;
 	nav{
