--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -13,5 +13,10 @@
 @import "components/dashboard-item";
 @import "components/footer";
 @import "components/frame";
+@import "components/button";
+@import "components/alert";
+@import "components/box";
+@import "components/admin-form";
+@import "components/admin-table-show";
 
 @import "grids";
