--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -26,3 +26,28 @@ $article-color-white: #FFFFFF;
 
 $dashboard-item-border-color: #F1F1F1;
 $frame: #E3E3EB;
+
+/* btn */
+$btn-default-background-color: #f4f4f4;
+$btn-default-border-color: #ddd;
+
+$btn-add-background-color: #00a65a;
+$btn-add-border-color: #008d4c;
+
+$btn-edit-background-color: #00c0ef;
+$btn-edit-border-color: #00acd6;
+
+$btn-remove-background-color: #dd4b39;
+$btn-remove-border-color: #d73925;
+
+$btn-primary-background-color: #3c8dbc;
+$btn-primary-border-color: #367fa9;
+
+/* alert */
+$alert-danger-background-color: #f44336;
+
+$alert-success-background-color: #4CAF50;
+
+$alert-info-background-color: #2196F3;
+
+$alert-warning-background-color: #ff9800;
