--- a/www/public/scss/src/scss/components/_button.scss
+++ b/www/public/scss/src/scss/components/_button.scss
@@ -1,50 +1,86 @@
-// .button {
-//     text-decoration: none;
-//     background-color: $text-color;
-//     color: $white;
-//     text-transform: uppercase;
-//     display: inline-block;
-//     padding: 1em 1.5em;
-//     font-size: rem(12);
-//     letter-spacing: 0.05em;
-//     transition: background-color 0.3s;
-//     &:hover {
-//         background-color: lighten($text-color, 10%);
-//     }
-//     &--success {
-//         background-color: $green;
-//         &:hover {
-//             background-color: lighten($green, 10%);
-//         }
-//     }
-//     &--alert {
-//         background-color: $red;
-//         &:hover {
-//             background-color: lighten($red, 10%);
-//         }
-//     }
-// }
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    text-decoration: none;
 
-// .btn {
-//     display: inline-block;
-//     font-weight: 400;
-//     color: #858796;
-//     text-align: center;
-//     vertical-align: middle;
-//     user-select: none;
-//     background-color: transparent;
-//     border: 1px solid transparent;
-//     padding: 0.375rem 0.75rem;
-//     font-size: 1rem;
-//     line-height: 1.5;
-//     border-radius: 0.35rem;
-//     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-//     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-//     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-//   }
+    &-default {
+        background-color: $btn-default-background-color;
+        color: $text-color;
+        border-color: $btn-default-border-color;
+    }
 
-//   .btn-primary {
-//     color: #fff;
-//     background-color: #4e73df;
-//     border-color: #4e73df;
-//   }
+    &-add {
+        background-color: $btn-add-background-color;
+        border-color: $btn-add-border-color;
+        color: $white;
+    }
+
+    &-edit {
+        background-color: $btn-edit-background-color;
+        border-color: $btn-edit-border-color;
+        color: $white;
+    }
+
+    &-remove {
+        background-color: $btn-remove-background-color;
+        border-color: $btn-remove-border-color;
+        color: $white;
+    }
+
+    &-primary {
+        background-color: $btn-primary-background-color;
+        border-color: $btn-primary-border-color;
+        color: $white;
+    }
+
+    &-dropdown {
+        border: none;
+    }
+
+    &-slider{
+        width: 3rem;
+        height: 3rem;
+        position: relative;
+        cursor: pointer;
+        border:none;
+    
+        &:hover{
+            opacity: 0.8;
+        }
+    
+        &::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-image: url('/public/img/arrow.svg');
+            background-position: center;
+            background-size: contain;
+        }
+        &--prev::before{	
+            transform: rotate(180deg);
+        }
+    }
+}
+
+.btn-footer {
+    color: $grey;
+    border: none;
+    background: none;
+    font-size: 1.1em;
+    cursor: pointer;
+}
