--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -8,6 +8,8 @@ $grey: #818181;
 $black: #000;
 $black-transparent: rgba(0, 0, 0, 0.6);
 $btn-more: #D6D6E1;
+$purple: #402082;
+$light-purple: #755BAA;
 
 $nb-column-grid: 12;
 $gouttiere: 10;
