--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -18,5 +18,6 @@
 @import "components/box";
 @import "components/admin-form";
 @import "components/admin-table-show";
+@import "components/card";
 
 @import "grids";
