--- a/www/public/scss/src/scss/_editor.scss
+++ b/www/public/scss/src/scss/_editor.scss
@@ -39,6 +39,16 @@
     &-left-0 {
         margin-left: 0!important;
     }
+    &-bottom {
+        &-75 {
+            margin-bottom: rem(75)!important;
+        }
+    }
+    &-top {
+        &-50 {
+            margin-top: rem(50)!important;
+        }
+    }
 }
 
 .color {
@@ -56,10 +66,25 @@
     }
 }
 
+.width {
+    &-100 {
+        width: 100%;
+    }
+}
+
+
+
 .flex-column {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.flex-raw {
+    display: flex;
+    flex-direction: raw;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .title {
@@ -72,4 +97,8 @@
 .subtitle {
     margin-top: 0;
     color: $grey;
+}
+
+i {
+    margin-right : 10px;
 }
