Ajout views menu (add/edit/show) + modification du form modal pour textarea et select + ajout view styleguide (/styleguide) + framework

--- a/www/public/scss/src/scss/components/_admin-form.scss
+++ b/www/public/scss/src/scss/components/_admin-form.scss
@@ -35,7 +35,16 @@
 
             &::placeholder {
                 color: $grey;
+                font-family: $font3;
             }
         }
+
+        &-textarea {
+            height: rem(150);
+        }
     }
+}
+
+.fa {
+    margin-right : 10px;
 }
