Ajout des views pour installation du CMS (configuration bdd + compte admin)

--- a/www/public/scss/src/scss/_editor.scss
+++ b/www/public/scss/src/scss/_editor.scss
@@ -43,6 +43,9 @@
         &-75 {
             margin-bottom: rem(75)!important;
         }
+        &-25 {
+            margin-bottom: rem(25)!important;
+        }
     }
     &-top {
         &-50 {
