--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -19,5 +19,6 @@
 @import "components/admin-form";
 @import "components/admin-table-show";
 @import "components/card";
+@import "components/progress";
 
 @import "grids";
