--- a/www/public/scss/src/scss/components/_button.scss
+++ b/www/public/scss/src/scss/components/_button.scss
@@ -58,7 +58,7 @@
         font-weight: 600;
         font-size: rem(15);
         margin-top: 1rem;
-        text-align: left;
+        text-align: center;
 
         &-blue {
             background-color: $btn-primary-background-color;
