Initialisation du page builder

--- a/www/public/scss/src/scss/_variables.scss
+++ b/www/public/scss/src/scss/_variables.scss
@@ -26,3 +26,7 @@ $article-color-white: #FFFFFF;
 
 $dashboard-item-border-color: #F1F1F1;
 $frame: #E3E3EB;
+
+$nav-bar-height: 64;
+
+$page-height: $gouttiere * 2 + $nav-bar-height;
