--- a/www/public/scss/src/scss/main.scss
+++ b/www/public/scss/src/scss/main.scss
@@ -13,5 +13,7 @@
 @import "components/dashboard-item";
 @import "components/footer";
 @import "components/frame";
+@import "components/pageBuilder/page";
+@import "components/textEditor";
 
 @import "grids";
