--- a/www/public/scss/src/scss/components/_navbar.scss
+++ b/www/public/scss/src/scss/components/_navbar.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between; 
     box-shadow: rem(0) rem(4) rem(4) rgba(236, 236, 236, 0.5);
-    height: 4rem;
+    height: rem($nav-bar-height);
     
     & &-back{
         display: flex;
