--- a/public/scss/src/scss/main.scss
+++ b/public/scss/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "components/card";
 @import "components/progress";
 @import "components/pageBuilder/page";
+@import "components/pageBuilder/editor";
 @import "components/textEditor";
 
 @import "grids";
