--- a/public/scss/scss/src/scss/main.css
+++ b/public/scss/scss/src/scss/main.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Montserrat:400,400i,700,700i&display=swap);@charset "UTF-8";
 
+/* btn */
+
+/* alert */
+
 * {
   box-sizing: border-box;
 }
@@ -83,6 +87,51 @@ div.ligne {
   width: 50%;
 }
 
+.center {
+  margin: auto;
+}
+
+.right {
+  float: right;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.flex-column {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: center;
+          align-items: center;
+}
+
+.flex-raw {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: raw;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.title {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 2.5em;
+  font-weight: 700;
+}
+
+.subtitle {
+  margin-top: 0;
+  color: #818181;
+}
+
 .bg-white {
   background-color: #FFFFFF;
 }
@@ -97,6 +146,12 @@ div.ligne {
 
 .bg-purple {
   background-color: #E7E0F4;
+}
+
+.bg-main {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #755BAA), to(#402082));
+  background: linear-gradient(180deg, #755BAA 0, #402082);
+  min-height: 100vh;
 }
 
 .padding-0 {
@@ -131,17 +186,45 @@ div.ligne {
   margin-left: 0 !important;
 }
 
-.txt-editor,
-.tools-bar-item:hover,
-.txt-editor-btn-hidden:hover,
-.tools-bar-item-hidden:hover,
-.add-container-button,
-.pageBuilder-item,
-.pageBuilder-container-btn:hover,
-.pageBuilder-container-btn-validate:hover,
-.pageBuilder-container-btn-edit:hover,
+.margin-bottom-75 {
+  margin-bottom: 4.6875rem !important;
+}
+
+.margin-bottom-25 {
+  margin-bottom: 1.5625rem !important;
+}
+
+.margin-top-50 {
+  margin-top: 3.125rem !important;
+}
+
+.color-white {
+  color: #fff !important;
+}
+
+.color-light {
+  color: #f8f9fc !important;
+}
+
+.color-grey {
+  color: #818181 !important;
+}
+
+.color-purple {
+  color: #402082 !important;
+}
+
+.page,
 .pageBuilder-container-displayed,
-.page {
+.pageBuilder-container-btn:hover,
+.pageBuilder-container-btn-edit:hover,
+.pageBuilder-container-btn-validate:hover,
+.pageBuilder-item,
+.add-container-button,
+.tools-bar-item:hover,
+.tools-bar-item-hidden:hover,
+.txt-editor-btn-hidden:hover,
+.txt-editor {
   box-shadow: 0rem 0rem 0.1875rem 0.125rem rgba(0, 0, 0, 0.1);
 }
 
@@ -210,35 +293,6 @@ div.ligne {
 .disabled {
   pointer-events: none;
   opacity: 0.8;
-}
-
-.btn {
-  width: 3rem;
-  height: 3rem;
-  position: relative;
-  cursor: pointer;
-  border: none;
-}
-
-.btn:hover {
-  opacity: 0.8;
-}
-
-.btn::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: url("/public/img/arrow.svg");
-  background-position: center;
-  background-size: contain;
-}
-
-.btn--prev::before {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
 }
 
 .navbar-search {
@@ -437,8 +491,6 @@ div.ligne {
   z-index: 10;
 }
 
-/* Front */
-
 .dropdown {
   position: relative;
   display: inline-block;
@@ -468,11 +520,6 @@ div.ligne {
 
 .dropdown:hover .dropdown-content {
   display: block;
-}
-
-.dropbtn {
-  border: none;
-  cursor: pointer;
 }
 
 .dashboard-item {
@@ -586,14 +633,6 @@ footer .circle .up {
   -webkit-transform: rotate(-135deg);
 }
 
-footer button {
-  color: #818181;
-  border: none;
-  background: none;
-  font-size: 1.1em;
-  cursor: pointer;
-}
-
 .frame-menus,
 .frame {
   padding: 1.375rem 1.375rem !important;
@@ -641,6 +680,357 @@ footer button {
   box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.btn-default {
+  background-color: #f4f4f4;
+  color: #444;
+  border-color: #ddd;
+}
+
+.btn-add {
+  background-color: #00a65a;
+  border-color: #008d4c;
+  color: #fff;
+}
+
+.btn-edit {
+  background-color: #00c0ef;
+  border-color: #00acd6;
+  color: #fff;
+}
+
+.btn-remove {
+  background-color: #dd4b39;
+  border-color: #d73925;
+  color: #fff;
+}
+
+.btn-primary {
+  background-color: #3c8dbc;
+  border-color: #367fa9;
+  color: #fff;
+}
+
+.btn-dropdown {
+  border: none;
+}
+
+.btn-account {
+  background-color: #fff;
+  color: #402082;
+  text-transform: uppercase;
+  padding-left: 0.875rem;
+  padding-right: 0.875rem;
+  font-weight: 600;
+  font-size: 0.9375rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.btn-account-blue {
+  background-color: #3c8dbc;
+  color: #fff;
+  width: 100%;
+}
+
+.btn-account-red {
+  background-color: #dd4b39;
+  color: #fff;
+  width: 45%;
+}
+
+.btn-account-green {
+  background-color: #00a65a;
+  color: #fff;
+  width: 45%;
+}
+
+.btn-account:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+}
+
+.btn-slider {
+  width: 3rem;
+  height: 3rem;
+  position: relative;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-slider:hover {
+  opacity: 0.8;
+}
+
+.btn-slider::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url("/public/img/arrow.svg");
+  background-position: center;
+  background-size: contain;
+}
+
+.btn-slider--prev::before {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.btn-footer {
+  color: #818181;
+  border: none;
+  background: none;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+.alert {
+  padding: 20px;
+  color: white;
+  margin-bottom: 15px;
+}
+
+.alert-danger {
+  background-color: #f44336;
+}
+
+.alert-success {
+  background-color: #4CAF50;
+}
+
+.alert-info {
+  background-color: #2196F3;
+}
+
+.alert-warning {
+  background-color: #ff9800;
+}
+
+.alert .closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.alert .closebtn:hover {
+  color: black;
+}
+
+.box {
+  position: relative;
+  border-radius: 3px;
+  background: #fff;
+  border-top: 3px solid #d2d6de;
+  margin-bottom: 20px;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.box-header {
+  color: #444;
+  display: block;
+  padding: 10px;
+  position: relative;
+}
+
+.box-header.with-border {
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.box-title {
+  display: inline-block;
+  font-size: 18px;
+  margin: 0;
+  line-height: 1;
+}
+
+.box-body {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding: 10px;
+}
+
+.admin-form label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: 700;
+  color: #333;
+  font-size: 14px;
+}
+
+.admin-form .form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  box-shadow: none;
+  border-color: #d2d6de;
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.admin-form .form-control-user {
+  border: none;
+  border-bottom: 0.0625rem solid #818181;
+}
+
+.admin-form .form-control-user:focus {
+  outline: none;
+  border-bottom: 0.125rem solid #402082;
+}
+
+.admin-form .form-control-user::-webkit-input-placeholder {
+  color: #818181;
+  font-family: "Arial", FontAwesome;
+}
+
+.admin-form .form-control-user::-moz-placeholder {
+  color: #818181;
+  font-family: "Arial", FontAwesome;
+}
+
+.admin-form .form-control-user:-ms-input-placeholder {
+  color: #818181;
+  font-family: "Arial", FontAwesome;
+}
+
+.admin-form .form-control-user::-ms-input-placeholder {
+  color: #818181;
+  font-family: "Arial", FontAwesome;
+}
+
+.admin-form .form-control-user::placeholder {
+  color: #818181;
+  font-family: "Arial", FontAwesome;
+}
+
+.admin-form .form-control-textarea {
+  height: 9.375rem;
+}
+
+.fa {
+  margin-right: 10px;
+}
+
+.admin-table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+}
+
+.admin-table-bordered,
+.admin-table th,
+.admin-table td {
+  border: 1px solid #E7E7E7;
+  padding: 8px;
+}
+
+.admin-table tr {
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  text-align: left;
+}
+
+.card {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  border-radius: 4px;
+  box-shadow: rgba(50, 50, 93, 0.11) 0 4px 4px 0, rgba(0, 0, 0, 0.08) 0 1px 3px 0;
+  background-color: #fff;
+  padding: 1.5rem;
+  margin: .5rem 0 1rem;
+  width: 100%;
+}
+
+.progress {
+  margin-top: 1.5625rem;
+  width: 100%;
+  border: 0.0625rem solid #818181;
+  border-radius: 0.75rem;
+  height: 0.9375rem;
+}
+
+.progress-25 {
+  height: 100%;
+  width: 25%;
+  border-radius: 0.75rem;
+  border: none;
+  background-color: #402082;
+}
+
+.progress-50 {
+  height: 100%;
+  width: 50%;
+  border-radius: 0.75rem;
+  border: none;
+  background-color: #402082;
+}
+
+.progress-75 {
+  height: 100%;
+  width: 75%;
+  border-radius: 0.75rem;
+  border: none;
+  background-color: #402082;
+}
+
+.progress-100 {
+  height: 100%;
+  width: 100%;
+  border-radius: 0.75rem;
+  border: none;
+  background-color: #402082;
+}
+
 .page {
   border-radius: 0.5rem;
   width: auto;
@@ -648,9 +1038,9 @@ footer button {
   background-color: #dee5f3;
 }
 
-.pageBuilder-container-hover,
+.pageBuilder-container-hidden,
 .pageBuilder-container-displayed,
-.pageBuilder-container-hidden {
+.pageBuilder-container-hover {
   position: relative;
   display: -webkit-box;
   display: flex;
@@ -679,8 +1069,8 @@ footer button {
 }
 
 .pageBuilder-container-btn,
-.pageBuilder-container-btn-validate,
-.pageBuilder-container-btn-edit {
+.pageBuilder-container-btn-edit,
+.pageBuilder-container-btn-validate {
   display: -webkit-box;
   display: flex;
   position: absolute;
@@ -701,8 +1091,8 @@ footer button {
 }
 
 .pageBuilder-container-btn:hover,
-.pageBuilder-container-btn-validate:hover,
-.pageBuilder-container-btn-edit:hover {
+.pageBuilder-container-btn-edit:hover,
+.pageBuilder-container-btn-validate:hover {
   cursor: pointer;
 }
 
@@ -784,8 +1174,8 @@ footer button {
 }
 
 .tools-bar-item,
-.txt-editor-btn-hidden,
-.tools-bar-item-hidden {
+.tools-bar-item-hidden,
+.txt-editor-btn-hidden {
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: center;
@@ -799,8 +1189,8 @@ footer button {
 }
 
 .tools-bar-item:hover,
-.txt-editor-btn-hidden:hover,
-.tools-bar-item-hidden:hover {
+.tools-bar-item-hidden:hover,
+.txt-editor-btn-hidden:hover {
   cursor: pointer;
 }
 
@@ -839,9 +1229,9 @@ footer button {
 }
 
 .txt-editor-btn,
-.txt-editor-btn-underline,
+.txt-editor-btn-bold,
 .txt-editor-btn-italic,
-.txt-editor-btn-bold {
+.txt-editor-btn-underline {
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: center;
@@ -860,9 +1250,9 @@ footer button {
 }
 
 .txt-editor-btn:hover,
-.txt-editor-btn-underline:hover,
+.txt-editor-btn-bold:hover,
 .txt-editor-btn-italic:hover,
-.txt-editor-btn-bold:hover {
+.txt-editor-btn-underline:hover {
   background-size: 60%;
   cursor: pointer;
 }
@@ -1079,14 +1469,14 @@ footer button {
 /* Déclaration des styles sm */
 
 .col-sm-1 {
-  flex-basis: 8.3333333333%;
-  width: 8.3333333333%;
+  flex-basis: 8.33333333%;
+  width: 8.33333333%;
   padding: 0rem 0.625rem;
 }
 
 .col-sm-2 {
-  flex-basis: 16.6666666667%;
-  width: 16.6666666667%;
+  flex-basis: 16.66666667%;
+  width: 16.66666667%;
   padding: 0rem 0.625rem;
 }
 
@@ -1097,14 +1487,14 @@ footer button {
 }
 
 .col-sm-4 {
-  flex-basis: 33.3333333333%;
-  width: 33.3333333333%;
+  flex-basis: 33.33333333%;
+  width: 33.33333333%;
   padding: 0rem 0.625rem;
 }
 
 .col-sm-5 {
-  flex-basis: 41.6666666667%;
-  width: 41.6666666667%;
+  flex-basis: 41.66666667%;
+  width: 41.66666667%;
   padding: 0rem 0.625rem;
 }
 
@@ -1115,14 +1505,14 @@ footer button {
 }
 
 .col-sm-7 {
-  flex-basis: 58.3333333333%;
-  width: 58.3333333333%;
+  flex-basis: 58.33333333%;
+  width: 58.33333333%;
   padding: 0rem 0.625rem;
 }
 
 .col-sm-8 {
-  flex-basis: 66.6666666667%;
-  width: 66.6666666667%;
+  flex-basis: 66.66666667%;
+  width: 66.66666667%;
   padding: 0rem 0.625rem;
 }
 
@@ -1133,14 +1523,14 @@ footer button {
 }
 
 .col-sm-10 {
-  flex-basis: 83.3333333333%;
-  width: 83.3333333333%;
+  flex-basis: 83.33333333%;
+  width: 83.33333333%;
   padding: 0rem 0.625rem;
 }
 
 .col-sm-11 {
-  flex-basis: 91.6666666667%;
-  width: 91.6666666667%;
+  flex-basis: 91.66666667%;
+  width: 91.66666667%;
   padding: 0rem 0.625rem;
 }
 
@@ -1154,12 +1544,12 @@ footer button {
 
 @media screen and (min-width: 60rem) {
   .col-md-1 {
-    flex-basis: 8.3333333333%;
+    flex-basis: 8.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-md-2 {
-    flex-basis: 16.6666666667%;
+    flex-basis: 16.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1169,12 +1559,12 @@ footer button {
   }
 
   .col-md-4 {
-    flex-basis: 33.3333333333%;
+    flex-basis: 33.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-md-5 {
-    flex-basis: 41.6666666667%;
+    flex-basis: 41.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1184,12 +1574,12 @@ footer button {
   }
 
   .col-md-7 {
-    flex-basis: 58.3333333333%;
+    flex-basis: 58.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-md-8 {
-    flex-basis: 66.6666666667%;
+    flex-basis: 66.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1199,12 +1589,12 @@ footer button {
   }
 
   .col-md-10 {
-    flex-basis: 83.3333333333%;
+    flex-basis: 83.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-md-11 {
-    flex-basis: 91.6666666667%;
+    flex-basis: 91.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1216,12 +1606,12 @@ footer button {
 
 @media screen and (min-width: 100rem) {
   .col-lg-1 {
-    flex-basis: 8.3333333333%;
+    flex-basis: 8.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-lg-2 {
-    flex-basis: 16.6666666667%;
+    flex-basis: 16.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1231,12 +1621,12 @@ footer button {
   }
 
   .col-lg-4 {
-    flex-basis: 33.3333333333%;
+    flex-basis: 33.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-lg-5 {
-    flex-basis: 41.6666666667%;
+    flex-basis: 41.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1246,12 +1636,12 @@ footer button {
   }
 
   .col-lg-7 {
-    flex-basis: 58.3333333333%;
+    flex-basis: 58.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-lg-8 {
-    flex-basis: 66.6666666667%;
+    flex-basis: 66.66666667%;
     padding: 0rem 0.625rem;
   }
 
@@ -1261,12 +1651,12 @@ footer button {
   }
 
   .col-lg-10 {
-    flex-basis: 83.3333333333%;
+    flex-basis: 83.33333333%;
     padding: 0rem 0.625rem;
   }
 
   .col-lg-11 {
-    flex-basis: 91.6666666667%;
+    flex-basis: 91.66666667%;
     padding: 0rem 0.625rem;
   }
 
