Suppression des menus : OK

--- a/public/scss/src/scss/components/_admin-table-show.scss
+++ b/public/scss/src/scss/components/_admin-table-show.scss
@@ -14,5 +14,14 @@
         line-height: 1.42857143;
         color: #333;
         text-align: left;
+
+        & input[type="text"] {
+            font-size: 14px;
+            line-height: 1.42857143;
+            color: #333;
+            text-align: left;
+            width: 100%;
+            border: none;
+        }
     }
 }
