Supprimer, modifier, liste user (reste gérer role)

--- a/public/scss/src/scss/components/_admin-form.scss
+++ b/public/scss/src/scss/components/_admin-form.scss
@@ -42,6 +42,10 @@
         &-textarea {
             height: rem(150);
         }
+
+        &-none {
+            display: none;
+        }
     }
 }
 
