--- a/public/scss/src/scss/components/pageBuilder/_page.scss
+++ b/public/scss/src/scss/components/pageBuilder/_page.scss
@@ -15,14 +15,13 @@
     align-items: center;
     width: auto;
     height: auto;
-    min-height: rem(100);
+    min-height: rem(150);
 }
 
 .pageBuilder {
     &-container {
         &-hidden {
             @extend %pageBuilder-container;
-            border: none;
         }
         
         &-displayed {
@@ -30,110 +29,137 @@
             @extend %shadowed;
             border-radius: rem(8);
             background-color: white;
+
+            &-empty {
+                @extend %pageBuilder-container;
+                @extend %shadowed;
+                border-radius: rem(8);
+            }
         }
 
         &-hover {
             @extend %pageBuilder-container;
             cursor: pointer;
         }
-
-        &-btn {
+        
+        &-list-structure-bar {
             display: flex;
-            position: absolute;
-            z-index: 2;
-            bottom: rem(10);
-            margin: 0;
             flex-flow: row wrap;
             justify-content: center;
             align-items: center;
-            width: rem(35);
-            height: rem(35);
+            width: 100%;
+            height: 100%;
             border-radius: 100%;
-            background-size: 50%;
-            background-repeat: no-repeat;
-            background-position: center;
+        }
+
+        &-structure-btn {
+
+            &-small {
+                @extend .pageBuilder-btn;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 50%;
+                background-image: url('/img/icones/structureBtn.png');
+            }
             
-            &:hover {
+            &-big {
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+                align-items: center;
+                width: rem(60);
+                height: rem(60);
                 @extend %shadowed;
-                cursor: pointer;
+                border-radius: rem(8);
+                background-color: white;  
+                background-size: 70%;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin: 0 rem(10) 0 rem(10);
+            
+                &:hover {
+                    cursor: pointer;
+                }
             }
 
-            &-edit {
-                @extend .pageBuilder-container-btn;
-                background-image: url('/img/icones/edit-tools.png');
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: rem(10);
+            &-12 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/1col.png');
             }
 
-            &-validate {
-                @extend .pageBuilder-container-btn;
-                background-image: url('/img/icones/check.png');
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: rem(10);
+            &-6_6 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/2cols.png');
             }
 
-            &-position-left {
-                @extend .pageBuilder-container-btn;
-                background-image: url('/img/icones/right-arrow.png');
-                background-color: white;
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: 0;
-                top: 50%;
-                transform: translate(50%, -50%);
-                @extend %shadowed;
+            &-4_4_4 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/3cols.png');
             }
-            &-position-right {
-                @extend .pageBuilder-container-btn;
-                background-image: url('/img/icones/right-arrow.png');
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: 0;
-                top: 50%;
-                transform: translateY(-50%);
-                transform: translateX(50%);
-                transform: rotate(180);
-                @extend %shadowed;
+
+            &-3_3_3_3 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/4cols.png');
             }
-            &-position-top {
-                @extend .pageBuilder-container-btn;
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: 0;
-                top: 50%;
-                background-image: url('/img/icones/right-arrow.png');
-                transform: translateY(-50%);
-                transform: translateX(50%);
-                transform: rotate(-90);
-                @extend %shadowed;
+
+            &-3_6_3 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/3-6-3cols.png');
             }
-            &-position-bottom {
-                @extend .pageBuilder-container-btn;
-                background-image: url('/img/icones/right-arrow.png');
-                display: flex;
-                position: absolute;
-                align-items: center;
-                justify-content: center;
-                right: 0;
-                top: 50%;
-                transform: translateY(-50%);
-                transform: translateX(50%);
-                transform: rotate(90);
-                @extend %shadowed;
+
+            &-3_3_6 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/3-3-6cols.png');
+            }
+
+            &-6_3_3 {
+                @extend .pageBuilder-container-structure-btn-big;
+                background-image: url('/img/icones/6-3-3cols.png');
             }
         }
+
+        // &-btn {
+        //     display: flex;
+        //     position: absolute;
+        //     z-index: 2;
+        //     margin: 0;
+        //     flex-flow: row wrap;
+        //     justify-content: center;
+        //     align-items: center;
+        //     width: rem(35);
+        //     height: rem(35);
+        //     border-radius: 100%;
+        //     background-size: 50%;
+        //     background-repeat: no-repeat;
+        //     background-position: center;
+            
+        //     &:hover {
+        //         @extend %shadowed;
+        //         cursor: pointer;
+        //     }
+
+        //     &-edit {
+        //         @extend .pageBuilder-container-btn;
+        //         background-image: url('/img/icones/edit-tools.png');
+        //         display: flex;
+        //         position: absolute;
+        //         align-items: center;
+        //         justify-content: center;
+        //         right: rem(10);
+        //         bottom: rem(10);
+        //     }
+
+        //     &-validate {
+        //         @extend .pageBuilder-container-btn;
+        //         background-image: url('/img/icones/check.png');
+        //         display: flex;
+        //         position: absolute;
+        //         align-items: center;
+        //         justify-content: center;
+        //         right: rem(10);
+        //         bottom: rem(10);
+        //    }
+        // }
 
         &-tools-bar {
             display: none;
@@ -169,6 +195,43 @@
         }
     }
 
+    &-btn {
+        display: flex;
+        z-index: 2;
+        margin: 0;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        width: rem(35);
+        height: rem(35);
+        border-radius: 100%;
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 0 rem(10) 0 rem(10);
+        @extend %shadowed;
+        background-color: white;
+
+        
+        &:hover {
+            cursor: pointer;
+        }
+
+        &-add, &-cancel {
+            @extend .pageBuilder-btn;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            width: rem(35);
+            height: rem(35);
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+
     &-side-bar {
         display: flex;
         min-height: calc(100vh - 100px);
@@ -198,21 +261,6 @@
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("../../../../../img/icones/text-editor/editor-icon.png");
-}
-
-.add-container-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-    @extend %shadowed;
-    width: rem(30);
-    height: rem(30);
-    background-color: white;
-
-    &:hover {
-        cursor: pointer;
-    }
 }
 
 .tools-bar {
