--- a/public/scss/src/scss/main.scss
+++ b/public/scss/src/scss/main.scss
@@ -20,5 +20,6 @@
 @import "components/admin-table-show";
 @import "components/card";
 @import "components/progress";
+@import "components/article";
 
 @import "grids";
