Ajout du delete image et upload image dans le dossier img/uploadImages

--- a/public/scss/src/scss/main.scss
+++ b/public/scss/src/scss/main.scss
@@ -21,5 +21,6 @@
 @import "components/card";
 @import "components/progress";
 @import "components/article";
+@import "components/thumbnail";
 
 @import "grids";
